# binsift

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/project-memories/: codestyle_conventions.md  domain_glossary.md  operational_workflow.md  project-context.md  recipes_development.md
.claude/skills/analyze-binary/: SKILL.md
.claude/skills/verify/: SKILL.md
docs/: main-idea.md
elftriage/: __init__.py  __main__.py  arganalysis.py  callgraph.py  classifier.py  cli.py  dangerous_functions.py  disassembly.py  functions.py  imports.py  ir.py  parser.py  protections.py  report.py  stackframe.py  taint.py  types.py
tests/: conftest.py  test_arganalysis.py  test_callgraph.py  test_classifier.py  test_dangerous_functions.py  test_disassembly.py  test_exploit_scenarios.py  test_functions.py  test_imports.py  test_integration.py  test_ir.py  test_parser.py  test_protections.py  test_report.py  test_stackframe.py  test_taint.py
tests/binaries/: build.sh
tests/binaries/src/: safe_program.c  vuln_format_string.c  vuln_stack_overflow.c
